2023-05-31  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (COMPUTER_TMP): Better computer name

2023-05-30  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (status): Show the time window for the log analysis

2023-05-26  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: Parse only the last 60 minutes in the logs (faster)

2023-05-17  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: Prints a short message during wait times

2023-05-04  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (status): fix if no speed is available
        * tmstatus.sh: --verbose option

2023-05-03  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (usage): -s option
        * tmstatus.sh (usage): -p option
        * tmstatus.sh (status): fix the output if the finding changes progress is 100%

2023-05-02  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: if the logs are read, display the backup speed
        * tmstatus.sh (status): Shorten the %/s if less then 1
        * tmstatus.sh (status): Handle a speed of '-'

2023-04-02  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: filter out spurious df errors

2023-03-30  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (status): Percent of work done by finding changes

2023-03-24  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (status): Warn if --today is specified and the time machine is offline

2023-03-20  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (status): Number of backups today

2023-03-17  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: --today option

2023-02-16  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh (status): Some more filtering

2023-02-07  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh.completion: bash completion
        * tmstatus.sh: --quick option

2023-02-03  Matteo Corti  <matteo@corti.li>

        * tmstatus.sh: Show log files

2023-01-30  Matteo Corti  <matteo@corti.li>
